# fox-chess

./: .gitignore  Cargo.toml  README.md  append-bench-result.sh  build.rs  format-numbers.js  network-journal.md  network.txt
fox-chess-proc/: Cargo.toml
fox-chess-proc/src/: lib.rs  uci_fields_parser.rs  uci_fields_struct.rs
src/: bench.rs  bitboard.rs  board piece list.rs  board.rs  cli.rs  correction_history.rs  eval_values.rs  evaluate.rs  history.rs  magic_bitboard.rs  main.rs  move_generator.rs  move_generator_struct.rs  moves.rs  nnue.rs  perft.rs  pgn.rs  pretty_print_stats.rs  repetition_tracker.rs  search.rs  staged_move_generator.rs  texel.rs  time_management.rs  transposition_table.rs  uci.rs  uci_required_options_helper.rs
