[package]
name = "fox-chess"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
array-macro = "2.1.8"
build-info = "0.0.39"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"]}
fern = "0.7.1"
humantime = "2.1.0"
log = "0.4.22"
log-panics = "2.1.0"
num-format = "0.4.4"
rand = "0.8.5"
regex = "1.11.1"
vampirc-uci = "0.11.1"

[build-dependencies]
build-info-build = "0.0.39"
